fix: Increase contrast in editor window

--- a/src/assets/scss/tokens/themes.scss
+++ b/src/assets/scss/tokens/themes.scss
@@ -90,6 +90,11 @@
     --hero-background-color: var(--color-neutral-25);
     --footer-background-color: var(--color-neutral-25);
     --outline-color: var(--color-brand);
+
+    --editor-string-color: var(--color-warning-800);
+    --editor-comment-color: var(--color-success-700);
+    --editor-keyword-color: var(--color-primary-900);
+    --editor-name-color: var(--color-primary-700);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -133,6 +138,11 @@ html[data-theme="light"] {
     --hero-background-color: var(--color-neutral-25);
     --footer-background-color: var(--color-neutral-25);
     --outline-color: var(--color-brand);
+
+    --editor-string-color: var(--color-warning-800);
+    --editor-comment-color: var(--color-success-700);
+    --editor-keyword-color: var(--color-primary-900);
+    --editor-name-color: var(--color-primary-700);
 }
 
 html[data-theme="dark"] {
@@ -153,4 +163,9 @@ html[data-theme="dark"] {
     --hero-background-color: var(--color-neutral-800);
     --footer-background-color: var(--color-neutral-800);
     --outline-color: #fff;
+
+    --editor-string-color: var(--color-warning-300);
+    --editor-comment-color: var(--color-success-500);
+    --editor-keyword-color: var(--color-primary-500);
+    --editor-name-color: var(--color-primary-300);
 }
